06-Jan-2015 Fixes #100. Added CopiedFilename write property to Publisher.CollatedDirectory. If set, the directory is renamed during the copy. Also, Linux/OSX copy functionality has changed from 'cp' to 'bash -c cp' in order for wildcards to be evaluated.

06-Jan-2015 Added TokenizedString post-function, @ifnotempty(a,b). If 'a' is not an empty string, then use it, otherwise use b.

06-Jan-2015 Fixes #99. Xcode pre and post build scripts now escape double quotes.

06-Jan-2015 Added boolean property Bam.Core.TokenizedString.IsAliased, returning true when the TokenizedString is aliased to another.

06-Jan-2015 Fixes #98. Bam.Core.ICommandLineTool has been extended with a read-only property of type TokenizedStringArray, called TerminatingArguments. This pairs with the existing property InitialArguments, which adds arguments directly after the executed. This new property adds arguments after all other arguments. It can be used, for example, to invoke shell commands through bash requiring wildcard expansion, e.g. 'bash -c "cp * dest"', where the quotes around the copy command are required. This new property provides support to add the terminating quotes. Note: due to the change to the interface, any class implementing it will need to include a definition of this property. Note that if a class derives from Bam.Core.PreBuiltTool instead, no changes are necessary, as this class implements the property to return no arguments.

06-Jan-2015 Fixes #97. TokenizedString expressions referencing functions (pre or post) but having mismatched brackets, could result in the .NET regex engine hanging indefinitely. Added a timeout (5 seconds) and throw an exception with details on both the source expression and regex used, in order to diagnose the issue.
