@@ -6,6 +6,7 @@
     <Package name="Clang" version="Xcode6" />
     <Package name="Gcc" version="4.8" />
     <Package name="MakeFileBuilder" />
+    <Package name="Mingw" version="4.8.1" />
     <Package name="NativeBuilder" />
     <Package name="VisualC" version="12.0" />
     <Package name="VSSolutionBuilder" />
