@@ -1,3 +1,5 @@
+08-Jan-2015 Fixes #102. Preprocessor defines with quotes specified from the build scripts are now supported consistently across platforms and IDEs in BuildAMation. Added a test case, PreprocessorStringTest1, to exercise these forms. To specify a quoted string as a preprocessor definition within a (private or public) patch, use (settings as ICommonCompilerSettings).PreprocessorDefines.Add("DEFNAME", "\"astring\""); or the TokenizedString function (settings as ICommonCompilerSettings).PreprocessorDefines.Add("DEFNAME", this.CreateTokenizedString("@escapedquotes(apath)"));
+
 06-Jan-2015 Fixes #100. Added CopiedFilename write property to Publisher.CollatedDirectory. If set, the directory is renamed during the copy. Also, Linux/OSX copy functionality has changed from 'cp' to 'bash -c cp' in order for wildcards to be evaluated.
 
 06-Jan-2015 Added TokenizedString post-function, @ifnotempty(a,b). If 'a' is not an empty string, then use it, otherwise use b.
